Avance en la vista modificar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <form action="#">
                 <input type="email"  name="email" id="correo" placeholder="Correo Electrónico">
                 <input type="password" name="password" id="pass" placeholder="Ingrese su Contraseña">
-                <input type="button" class="alt-form" value="Iniciar Sesión" onclick="Login()" id="registro">
+                <input type="button" class="alt-form" value="Iniciar Sesión" onclick="Login(),rellenaFormulario()" id="registro">
                 <p class="text-footer">¿No te encuentras registrado? 
                     <a href="template/registro.html" target="_blank">Ingresa aquí</a>
                 </p>
