--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/alertify.min.css">
     <link rel="stylesheet" href="css/themes/default.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type = "image/x-icon" href="img/favicon.ico" />
     <title>Registro</title>
 </head>
 <body>
@@ -16,10 +17,10 @@
             <div class="logo-header">
                 <img src="img/logo3.jpg">
             </div><!--Logo-header-->
-            <h3 class="titulo">Iniciar Sesion</h3>
+            <h3 class="titulo">Iniciar Sesión</h3>
             <form action="#">
-                <input type="email"  name="email" id="correo" placeholder="Correo Electrónico">
-                <input type="password" name="password" id="pass" placeholder="Ingrese su Contraseña">
+                <input type="email" name="email" id="correo" placeholder="Correo Electrónico">
+                <input type="password" name="password" id="pass" placeholder="Ingrese su Contraseña" maxlength="11">
                 <input type="button" class="alt-form" value="Iniciar Sesión" onclick="Login(),rellenaFormulario()" id="registro">
                 <p class="text-footer">¿No te encuentras registrado? 
                     <a href="template/registro.html" target="_blank">Ingresa aquí</a>
